Group update, TKDE

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1275,16 +1275,6 @@ presort = {16},
 rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 }
 
-@misc{perera2021nodba,
-  title={No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
-  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {arXiv:2108.10130 [cs.DB]},
-  year={2021},
-  month={Aug},
-  presort={17},
-  rmdnote={pdf=https://arxiv.org/abs/2108.10130}
-}
-
 @inproceedings{cullen2022double,
   title={Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity},
   author={Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
@@ -1439,6 +1429,36 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Accepted}
 }
 
+@article{perera2023nodba,
+  title={No {DBA}? No regret! Multi-armed bandits for index tuning of analytical and {HTAP} workloads with provable guarantees},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2023},
+  note={Accepted},
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2108.10130}
+}
+
+@article{marchant2023bayesian,
+  title={{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
+  author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
+  year={2023},
+  journal={Journal of Survey Statistics and Methodology},
+  note={In press},
+  publisher={Oxford University Press},
+  presort={03},
+  rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962;code=https://github.com/cleanzr/exchanger-experiments}
+}
+
+@article{oetomo2023cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
+  year = {2023},
+  journal = {Knowledge and Information Systems},
+  notes = {Accepted},
+  presort={04}
+}
+
 @inproceedings{sun2023an,
   title={An Adversarial Strategic Game for Machine Learning as a Service using System Features},
   author={Guoxin Sun and Tansu Alpcan and Andrew C. Cullen and Seyit Camtepe and Benjamin I. P. Rubinstein},
@@ -1449,32 +1469,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={Extended abstract. Accepted}
 }
 
-@article{marchant2023bayesian,
-  title={{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
-  author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
-  year={2023},
-  journal={Journal of Survey Statistics and Methodology},
-  note={In press},
-  publisher={Oxford University Press},
-  presort={02},
-  rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962;code=https://github.com/cleanzr/exchanger-experiments}
-}
-
-@article{oetomo2023cutting,
-  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
-  author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
-  year = {2023},
-  journal = {Knowledge and Information Systems},
-  notes = {Accepted},
-  presort={03}
-}
-
 @article{cullen2023predicting,
   title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
   author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
   journal={Artificial Intelligence Review},
   year={2023},
-  presort={04},
+  presort={06},
   rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
 }
 
@@ -1485,7 +1485,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {DBML},
   notes = {Co-located with ICDE. Accepted},
   year = {2023},
-  presort={06}
+  presort={07}
 }
 
 @misc{huang2023certified,
@@ -1494,7 +1494,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.CR]},
   year={2023},
   month={January},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
@@ -1504,6 +1504,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2302.04379 [cs.LG]},
   year={2023},
   month={February},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
