NLP workshop, arxiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1459,23 +1459,24 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={04}
 }
 
+@inproceedings{he2023imbert,
+  title = {{IMBERT}: Making {BERT} Immune to Insertion-based Backdoor Attacks},
+  author = {He, Xuanli and Wang, Jun and Rubinstein, Benjamin and Cohn, Trevor},
+  booktitle = {Third Workshop on Trustworthy Natural Language Processing},
+  series = {TrustNLP},
+  notes = {Co-located with ACL. Accepted},
+  year = {2023},
+  presort={05}
+}
+
 @inproceedings{sun2023an,
   title={An Adversarial Strategic Game for Machine Learning as a Service using System Features},
   author={Guoxin Sun and Tansu Alpcan and Andrew C. Cullen and Seyit Camtepe and Benjamin I. P. Rubinstein},
   booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
   series={AAMAS},
   year={2023},
-  presort={05},
-  note={Extended abstract. Accepted}
-}
-
-@article{cullen2023predicting,
-  title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
-  author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
-  journal={Artificial Intelligence Review},
-  year={2023},
   presort={06},
-  rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
+  note={Extended abstract. Accepted}
 }
 
 @inproceedings{liu2023efficient,
@@ -1488,13 +1489,22 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={07}
 }
 
+@article{cullen2023predicting,
+  title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
+  journal={Artificial Intelligence Review},
+  year={2023},
+  presort={08},
+  rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
+}
+
 @misc{huang2023certified,
   title={Certified Robustness of Learning-based Static Malware Detectors},
   author={Huang, Zhuoqun and Marchant, Neil G and Lucas, Keane and Bauer, Lujo and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
   note={arXiv:2207.11575 [cs.CR]},
   year={2023},
   month={January},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
@@ -1504,6 +1514,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2302.04379 [cs.LG]},
   year={2023},
   month={February},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
+}
+
+@misc{he2023mitigating,
+  title={Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
+  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin and Cohn, Trevor},
+  note={arXiv:2305.11596 [cs.CL]},
+  year={2023},
+  month={May},
+  presort={11},
+  rmdnote={pdf=https://arxiv.org/abs/2305.11596}
 }
