AAAI23 pub details

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1426,7 +1426,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 37th AAAI Conference on Artificial Intelligence},
   series={AAAI},
   presort={01},
-  note={Accepted}
+  pages={8861--8869},
+  rmdnote={pub=https://ojs.aaai.org/index.php/AAAI/article/view/26065}
 }
 
 @article{perera2023nodba,
