--- a/group.Rmd
+++ b/group.Rmd
@@ -21,10 +21,10 @@ I am fortunate to supervise a brilliant group of researchers.
 * [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-- ). Adversarial learning for NLP.
 * [Guoxin Sun](https://www.linkedin.com/in/guoxin-sun-338888162/). (w Tansu Alpcan, Seyit Camtepe 2020-- ). Adversarial learning/game theory for autonomous systems.
 * [Ruihan Zhang](https://scholar.google.com/citations?user=gjSlsnQAAAAJ&hl=en) (w Tim Miller, Kris Ehinger 2019-- ). Explainable AI and machine learning.
-* [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 
 ### PhD students---Completed
 
+* [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018--23). Self-driving databases → Software engineer at Amazon Web Services
 * [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018--23). Multi-armed bandits for database index selection → Postdoc at Univ Melbourne
 * [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018--22). Software fuzzing with machine learning → Open-Source Security at Google
 * [Neil Marchant](https://www.ngmarchant.net/) (w Beka Steorts at Duke, Aurore Delaigle 2016--20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne
