Oakland24, postdoc alum

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1419,13 +1419,22 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
 }
 
+@inproceedings{cullen2023its,
+  title={It's Simplex! Disaggregating Measures to Improve Certified Robustness},
+  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah and Rubinstein, Benjamin I. P.},
+  year={2023},
+  booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
+  note={Accepted},
+  presort={01}
+}
+
 @inproceedings{liu2023enhancing,
   title={Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
   author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah Monazam and Rubinstein, Benjamin I. P.},
   year={2023},
   booktitle={Proceedings of the 37th AAAI Conference on Artificial Intelligence},
   series={AAAI},
-  presort={01},
+  presort={02},
   pages={8861--8869},
   rmdnote={pub=https://ojs.aaai.org/index.php/AAAI/article/view/26065}
 }
@@ -1436,7 +1445,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={IEEE Transactions on Knowledge and Data Engineering},
   year={2023},
   note={Accepted},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2108.10130}
 }
 
@@ -1447,7 +1456,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Journal of Survey Statistics and Methodology},
   note={In press},
   publisher={Oxford University Press},
-  presort={03},
+  presort={04},
   rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962;code=https://github.com/cleanzr/exchanger-experiments}
 }
 
@@ -1457,7 +1466,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year = {2023},
   journal = {Knowledge and Information Systems},
   notes = {Accepted},
-  presort={04}
+  presort={05}
 }
 
 @inproceedings{he2023imbert,
@@ -1467,7 +1476,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {TrustNLP},
   notes = {Co-located with ACL. Accepted},
   year = {2023},
-  presort={05}
+  presort={06}
 }
 
 @inproceedings{sun2023an,
@@ -1476,7 +1485,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
   series={AAMAS},
   year={2023},
-  presort={06},
+  presort={07},
   note={Extended abstract. Accepted}
 }
 
@@ -1487,7 +1496,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {DBML},
   notes = {Co-located with ICDE. Accepted},
   year = {2023},
-  presort={07}
+  presort={08}
 }
 
 @article{cullen2023predicting,
@@ -1495,7 +1504,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
   journal={Artificial Intelligence Review},
   year={2023},
-  presort={08},
+  presort={09},
   rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
 }
 
@@ -1505,7 +1514,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2207.11575 [cs.CR]},
   year={2023},
   month={January},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
@@ -1515,7 +1524,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2302.04379 [cs.LG]},
   year={2023},
   month={February},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
 
@@ -1525,6 +1534,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2305.11596 [cs.CL]},
   year={2023},
   month={May},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2305.11596}
 }
