--- a/group.Rmd
+++ b/group.Rmd
@@ -9,7 +9,6 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### Postdocs
 
-* [Amila Silva](https://www.amilasilva.com/) (2023-- ). Multi-modal learning for human-AI teaming.
 * [Neil Marchant](https://www.ngmarchant.net/) (2021-- ). Robustness, privacy, and generalisation in machine learning.
 * [Andrew Cullen](https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au) (2019-- ). Certified robustness of machine learning.
 
@@ -41,6 +40,7 @@ I am fortunate to supervise a brilliant group of researchers.
 
 ### Other Alumni
 
+* [Amila Silva](https://www.amilasilva.com/) (postdoc 2023--23). Multi-modal learning for human-AI teaming →  Machine Learning Engineer, Canva
 * [Sandamal Weerasinghe](https://cis.unimelb.edu.au/people/prameesha-weerasinghe) (postdoc 2019--21). Adversarial machine learning.
 * [Roei Gelbhart](https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&hl=en) (student 2019--21). Robustness in machine learning.
 * [Chang Xu](https://changxu.io/) (postdoc 2020--21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.
