NeurIPS, FUZZ, XAI, many other pub updates

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1398,34 +1398,25 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={full=https://arxiv.org/abs/2112.15498;pub=https://ieeexplore.ieee.org/document/9825758}
 }
 
-@misc{jin2022getting,
-  title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
-  Robustness},
-  author={Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
-  note={arXiv:2205.10159 [cs.CR]},
-  year={2022},
-  month={May},
-  presort={12},
-  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
-}
-
 @misc{bachfischer22testing,
   title={Testing the Robustness of Learned Index Structures},
   author={Matthias Bachfischer and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
   note={arXiv:2207.11575 [cs.DB]},
   year={2022},
   month={July},
-  presort={13},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2207.11575}
 }
 
-@inproceedings{cullen2023its,
-  title={It's Simplex! Disaggregating Measures to Improve Certified Robustness},
-  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah and Rubinstein, Benjamin I. P.},
+@inproceedings{huang2023rsdel,
+  title={{RS-Del}: Edit Distance Robustness Certificates for Sequence Classifiers via Randomized Deletion},
+  author={Huang, Zhuoqun and Marchant, Neil G and Lucas, Keane and Bauer, Lujo and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  booktitle={Advances in Neural Information Processing Systems},
+  series={NeurIPS},
   year={2023},
-  booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
   note={Accepted},
-  presort={01}
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
 @inproceedings{liu2023enhancing,
@@ -1434,9 +1425,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2023},
   booktitle={Proceedings of the 37th AAAI Conference on Artificial Intelligence},
   series={AAAI},
-  presort={02},
+  presort={03},
   pages={8861--8869},
-  rmdnote={pub=https://ojs.aaai.org/index.php/AAAI/article/view/26065}
+  rmdnote={pub=https://ojs.aaai.org/index.php/AAAI/article/view/26065;full=https://arxiv.org/abs/2308.07553}
 }
 
 @article{perera2023nodba,
@@ -1445,8 +1436,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={IEEE Transactions on Knowledge and Data Engineering},
   year={2023},
   note={Accepted},
-  presort={03},
-  rmdnote={pdf=https://arxiv.org/abs/2108.10130}
+  pages={18},
+  presort={04},
+  rmdnote={pub=https://ieeexplore.ieee.org/document/10113193;full=https://arxiv.org/abs/2108.10130}
 }
 
 @article{marchant2023bayesian,
@@ -1454,9 +1446,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={Marchant, Neil G. and Rubinstein, Benjamin I. P. and Steorts, Rebecca C.},
   year={2023},
   journal={Journal of Survey Statistics and Methodology},
-  note={In press},
+  volume={11},
+  number={3},
+  pages={569--596},
+  month={June},
   publisher={Oxford University Press},
-  presort={04},
+  presort={05},
   rmdnote={pub=https://doi.org/10.1093/jssam/smac030;full=https://arxiv.org/abs/2301.02962;code=https://github.com/cleanzr/exchanger-experiments}
 }
 
@@ -1465,28 +1460,56 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author = {Oetomo, Bastian Saputra and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
   year = {2023},
   journal = {Knowledge and Information Systems},
-  notes = {Accepted},
-  presort={05}
+  volume={65},
+  pages={3533--3565},
+  rmdnote={pub=https://link.springer.com/article/10.1007/s10115-023-01861-2},
+  presort={06}
+}
+
+@article{sun2023to,
+  author={Sun, Guoxin and Alpcan, Tansu and Rubinstein, Benjamin I. P. and Camtepe, Seyit},
+  journal={IEEE Transactions on Information Forensics and Security}, 
+  title={To Act or Not To Act: An Adversarial Game for Securing Vehicle Platoons}, 
+  year={2023},
+  pages={16},
+  note={Accepted},
+  presort={07},
+  rmdnote={pub=https://ieeexplore.ieee.org/document/10266364}
+}
+
+@article{cullen2023predicting,
+  title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
+  journal={Artificial Intelligence Review},
+  year={2023},
+  volume={56},
+  pages={10921--10959},
+  presort={08},
+  rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
 }
 
 @inproceedings{he2023imbert,
   title = {{IMBERT}: Making {BERT} Immune to Insertion-based Backdoor Attacks},
   author = {He, Xuanli and Wang, Jun and Rubinstein, Benjamin and Cohn, Trevor},
-  booktitle = {Third Workshop on Trustworthy Natural Language Processing},
+  booktitle = {Proceedings of the 3rd Workshop on Trustworthy Natural Language Processing},
   series = {TrustNLP},
-  notes = {Co-located with ACL. Accepted},
+  pages={287--301},
+  notes = {Co-located with ACL},
   year = {2023},
-  presort={06}
+  presort={09},
+  rmdnote={pub=https://aclanthology.org/2023.trustnlp-1.25/}
 }
 
 @inproceedings{sun2023an,
   title={An Adversarial Strategic Game for Machine Learning as a Service using System Features},
   author={Guoxin Sun and Tansu Alpcan and Andrew C. Cullen and Seyit Camtepe and Benjamin I. P. Rubinstein},
-  booktitle={Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
+  booktitle={Proceedings of the 2023 International Conference on Autonomous Agents and Multiagent Systems},
   series={AAMAS},
   year={2023},
-  presort={07},
-  note={Extended abstract. Accepted}
+  presort={10},
+  note={Extended abstract},
+  pages={2508--2510},
+  rmdnote={pub=https://dl.acm.org/doi/10.5555/3545946.3598984}
 }
 
 @inproceedings{liu2023efficient,
@@ -1496,26 +1519,38 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series = {DBML},
   notes = {Co-located with ICDE. Accepted},
   year = {2023},
-  presort={08}
+  presort={11}
 }
 
-@article{cullen2023predicting,
-  title={Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
-  author={Cullen, Andrew C. and Rubinstein, Benjamin I. P. and Kandeepan, Sithamparanathan and Flower, Barry and Leong, Philip H. W.},
-  journal={Artificial Intelligence Review},
-  year={2023},
-  presort={09},
-  rmdnote={pub=https://doi.org/10.1007/s10462-023-10449-9}
+@inproceedings{gao2023beyond,
+  author = {Gao, Wentao and Pham, Van-Thuan and Liu, Dongge and Chang, Oliver and Murray, Toby and Rubinstein, Benjamin I.P.},
+  title = {Beyond the Coverage Plateau: A Comprehensive Study of Fuzz Blockers (Registered Report)},
+  year = {2023},
+  booktitle = {Proceedings of the 2nd International Fuzzing Workshop},
+  pages = {47--55},
+  series = {FUZZING},
+  rmdnote = {pub=https://doi.org/10.1145/3605157.3605177},
+  presort={12}
 }
 
-@misc{huang2023certified,
-  title={Certified Robustness of Learning-based Static Malware Detectors},
-  author={Huang, Zhuoqun and Marchant, Neil G and Lucas, Keane and Bauer, Lujo and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
-  note={arXiv:2207.11575 [cs.CR]},
+@inproceedings{zhang2023make,
+  title={Make Predictions Predictable: Fast Concept-based Counterfactual Explanations for Images},
+  author={Zhang, Ruihan and Miller, Tim and Ehinger, Krista and Rubinstein, Benjamin},
+  booktitle={Proceedings of the IJCAI 2023 Workshop on XAI},
   year={2023},
-  month={January},
-  presort={10},
-  rmdnote={pdf=https://arxiv.org/abs/2302.01757}
+  notes = {Co-located with IJCAI. Accepted},
+  presort={13},
+  rmdnote={pub=https://drive.google.com/file/d/1YCm5xVpvbMzfOoiiEWpTffuhkhKZsI7O/view?usp=sharing}
+}
+
+@inproceedings{zhang2023comparison,
+  title={Comparison of Supervised and Unsupervised Concepts in Concept-based Interpretable Models},
+  author={Zhang, Ruihan and Miller, Tim and Ehinger, Krista and Rubinstein, Benjamin},
+  booktitle={Proceedings of the IJCAI 2023 Workshop on XAI},
+  year={2023},
+  notes = {Co-located with IJCAI. Accepted},
+  presort={14},
+  rmdnote={pub=https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing}
 }
 
 @misc{cullen2023exploiting,
@@ -1524,7 +1559,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2302.04379 [cs.LG]},
   year={2023},
   month={February},
-  presort={11},
+  presort={15},
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
 
@@ -1534,6 +1569,27 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2305.11596 [cs.CL]},
   year={2023},
   month={May},
-  presort={12},
+  presort={16},
   rmdnote={pdf=https://arxiv.org/abs/2305.11596}
+}
+
+@misc{jin2022getting,
+  title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
+  Robustness},
+  author={Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note={arXiv:2205.10159 [cs.CR]},
+  year={2023},
+  month={Feb},
+  presort={17},
+  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
+}
+
+@inproceedings{cullen2023its,
+  title={It's Simplex! Disaggregating Measures to Improve Certified Robustness},
+  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah and Rubinstein, Benjamin I. P.},
+  year={2024},
+  booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
+  note={Accepted},
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
