--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1419,6 +1419,17 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2302.01757}
 }
 
+@inproceedings{he2023mitigating,
+  title={Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
+  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  booktitle={The 2023 Conference on Empirical Methods in Natural Language Processing},
+  series={EMNLP},
+  note={Accepted},
+  year={2023},
+  presort={02},
+  rmdnote={full=https://arxiv.org/abs/2305.11596}
+}
+
 @inproceedings{liu2023enhancing,
   title={Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
   author={Liu, Shijie and Cullen, Andrew C. and Montague, Paul and Erfani, Sarah Monazam and Rubinstein, Benjamin I. P.},
@@ -1563,16 +1574,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
 
-@misc{he2023mitigating,
-  title={Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
-  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin and Cohn, Trevor},
-  note={arXiv:2305.11596 [cs.CL]},
-  year={2023},
-  month={May},
-  presort={16},
-  rmdnote={pdf=https://arxiv.org/abs/2305.11596}
-}
-
 @misc{jin2022getting,
   title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
   Robustness},
@@ -1580,7 +1581,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2023},
   month={Feb},
-  presort={17},
+  presort={16},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
