RS-Del code & pub, PhD web

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1416,7 +1416,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2023},
   note={Accepted},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/abs/2302.01757}
+  rmdnote={pdf=https://arxiv.org/abs/2302.01757;pub=https://neurips.cc/virtual/2023/poster/70896;code=https://github.com/Dovermore/randomized-deletion}
 }
 
 @inproceedings{he2023mitigating,
