--- a/group.Rmd
+++ b/group.Rmd
@@ -20,7 +20,7 @@ I am fortunate to supervise a brilliant group of researchers.
 * [Jun Wang](https://www.linkedin.com/in/jun-wang-15065b170/). (w Trevor Cohn 2020-- ). Adversarial learning for NLP.
 * [Shijie Liu](https://www.linkedin.com/in/shijie-liu-9162b8151/). (w Sarah Erfani, Paul Montague, Andrew Cullen 2021-- ). Certified robustness at training time.
 * [Zhuoqun (Calvin) Huang](https://github.com/Dovermore). (w Olya Ohrimenko, Neil Marchant 2021-- ). Certified robustness in computer security applications.
-* [Jiankai Jin](https://cis.unimelb.edu.au/people/students/jiankai-jin). (w Olya Ohrimenko 2021-- ). Systems security of differential privacy.
+* [Jiankai Jin](https://jason-jiankai.github.io/). (w Olya Ohrimenko 2021-- ). Systems security of differential privacy.
 
 ### PhD students---Completed
 
