Code for Guoxin paper

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1383,6 +1383,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={ECML-PKDD},
   year={2022},
   presort={10},
+  rmdnote={code=https://github.com/garrisonsun/Securing-Cyber-Physical-Systems},
   note={Accepted}
 }
 
