--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1483,8 +1483,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={IEEE Transactions on Information Forensics and Security}, 
   title={To Act or Not To Act: An Adversarial Game for Securing Vehicle Platoons}, 
   year={2023},
-  pages={16},
-  note={Accepted},
+  pages={164--177},
+  volume={19},
   presort={07},
   rmdnote={pub=https://ieeexplore.ieee.org/document/10266364}
 }
